fixed headshot alignment

--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,7 @@ footer{
   }
 
   .avatar {
-    margin: 0 2em;
+    margin: 0 2.3em;
   }
 
   #about > * {
